--- a/aoc-2022/day-1/Cargo.toml
+++ b/aoc-2022/day-1/Cargo.toml
@@ -6,3 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-eyre = "0.6.2"
+itertools = "0.10.5"
+
+[[bin]]
+name = "day-1-part-1-first-part-1"
+path = "src/main-first.rs"
+bench = false
+test = false
+
+[[bin]]
+name = "day-1-part-1-second-part-1"
+path = "src/main-second.rs"
+bench = false
+test = false
+
+[[bin]]
+name = "day-1-part-1-third-part-1"
+path = "src/main-third.rs"
+bench = false
+test = false
+
